Update issue templates

--- a/.github/ISSUE_TEMPLATE/기능-구현-이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/기능-구현-이슈-템플릿.md
@@ -1,8 +1,8 @@
 ---
 name: 기능 구현 이슈 템플릿
 about: 작업내용을 상세히 설명합니다.
-title: "[FEAT]"
-labels: ''
+title: "[Feat] "
+labels: "✨ Feature"
 assignees: ''
 
 ---
