--- a/.github/ISSUE_TEMPLATE/버그-이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/버그-이슈-템플릿.md
@@ -1,8 +1,8 @@
 ---
 name: 버그 이슈 템플릿
 about: 발생한 오류를 기술합니다.
-title: "[BUG]"
-labels: ''
+title: "[Bug] "
+labels: "\U0001F41E BugFix"
 assignees: ''
 
 ---
