Update issue templates

--- a/.github/ISSUE_TEMPLATE/기능-구현-이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/기능-구현-이슈-템플릿.md
@@ -7,18 +7,17 @@ assignees: ''
 
 ---
 
-## 📄 작업 페이지 및 내용 요약
-> ex) 메인페이지 - 라우트 연결
+## 어떤 기능인가요?
 
-## 📌 이슈 넘버
-> ex) #이슈번호, #이슈번호
+> 추가하려는 기능에 대해 간결하게 설명해주세요
 
-## 📝 작업 내용
+## 작업 상세 내용
 
-## 📸 스크린샷(선택)
+- [ ] TODO1
+- [ ] TODO2
+- [ ] TODO3
 
-## 💬리뷰 요구사항(선택)
+## 예상 완료 기간
+> ex) ~ 10.27(일) 12:00. 시간은 선택사항
 
-> 리뷰어가 특별히 봐주었으면 하는 부분이 있다면 작성해주세요
->
-> ex) 메서드 XXX의 이름을 더 잘 짓고 싶은데 혹시 좋은 명칭이 있을까요?
+## 참고할만한 자료(선택)
