🔧 Github 템플릿 LF로 수정

--- a/.github/ISSUE_TEMPLATE/기능-구현-이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/기능-구현-이슈-템플릿.md
@@ -1,16 +1,17 @@
 ---
 name: 기능 구현 이슈 템플릿
 about: 작업내용을 상세히 설명합니다.
-title: "[Feat] "
-labels: "✨ Feature"
+title: '[Feat] '
+labels: '✨ Feature'
 assignees: ''
-
 ---
 
 ## 📄 작업 페이지 및 내용 요약
+
 > ex) 메인페이지 - 라우트 연결
 
 ## 📌 이슈 넘버
+
 > ex) #이슈번호, #이슈번호
 
 ## 📝 작업 내용
