📝 이슈 템플릿 수정

--- a/.github/ISSUE_TEMPLATE/기능-구현-이슈-템플릿.md
+++ b/.github/ISSUE_TEMPLATE/기능-구현-이슈-템플릿.md
@@ -6,13 +6,9 @@ labels: '✨ Feature'
 assignees: ''
 ---
 
-## 📄 작업 페이지 및 내용 요약
+## 어떤 기능인가요?
 
-> ex) 메인페이지 - 라우트 연결
-
-## 📌 이슈 넘버
-
-> ex) #이슈번호, #이슈번호
+> 추가하려는 기능에 대해 간결하게 설명해주세요
 
 ## 작업 상세 내용
 
